Automatically backed up by Learn

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -17,7 +17,7 @@
 
     <h3>New Owner</h3>
     <label>Owner Name: </label>
-    <input type="text" name="owner[name]" id="owner_id"></input>
+    <input type="text" name="owner[name]" id="owner_name"></input>
     <br><br>
 
     <input type="submit" value="Update Pet">
